--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/virtualfish"]
 	path = modules/virtualfish
 	url = git://github.com/adambrenecki/virtualfish.git
+[submodule "modules/fishmarks"]
+	path = modules/fishmarks
+	url = git@github.com:techwizrd/fishmarks.git
